# SpaceInvaders

./: .coverage  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/bar/: loading_bar_1_3.xcf  loading_bar_2_3.xcf  loading_bar_3_3.xcf
assets/coin/: dollar.xcf
assets/entity3/: ufo3_7_7.xcf
assets/explosion/: explode.xcf  explode_big.xcf
assets/healthBar/: rocket_static_1.xcf
assets/loadingCircle/: loading_circle.xcf
assets/loadingScreen/: image.xcf
assets/shopIcons/: yes.xcf  (+1 more)
background/: background.xcf
bar/: loading_bar_0_3.xcf
boss/: bossGIMP.xcf  boss_healthGIMP.xcf
entity1/: ufo_7_7.xcf
entity2/: health_bar_0_1.xcf
entity3/: health_2_2.xcf
healthBar/: Bez nazwy.xcf
level/: levelIcon.xcf
myenv/: pyvenv.cfg
player/: rocket.xcf
scripts/: barClass.py  bar_class.py  bulletClass.py  bulletEntityClass.py  bullet_class.py  bullet_entity_class.py  coinLevelClass.py  coin_level_class.py  entityClass.py  entity_class.py  explosionClass.py  healthClass.py  health_class.py  loadingCircleClass.py  loading_circle_class.py  playerClass.py  player_class.py  settingsClass.py  shopClass.py  shop_class.py  startEndDefeatScreen.py  start_end_defeat_screen.py
shopIcons/: shopBackground.xcf
src/: bar_class.py  bullet_class.py  bullet_entity_class.py  coin_level_class.py  entity_class.py  explosion_class.py  health_class.py  loading_circle_class.py  player_class.py  settings_class.py  shop_class.py  start_end_defeat_screen.py
tests/: conftest.py  test_bar.py  test_bullet.py  test_bullet_entity.py  test_coin_level.py
(+2 files in other folders)
